feat: basic articles integration, still broken images

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,10 @@
 
 @font-face {
 	font-family: 'FV Almelo';
-	src: url('/assets/fonts/FV-Almelo.woff') format('woff'), url('/assets/fonts/FV-Almelo.svg#FV-Almelo') format('svg'),
-		url('/assets/fonts/FV-Almelo.eot'), url('/assets/fonts/FV-Almelo.eot?#iefix') format('embedded-opentype');
+	src: url('/assets/fonts/fv-almelo/FV-Almelo.woff') format('woff'),
+		url('/assets/fonts/fv-almelo/FV-Almelo.svg#FV-Almelo') format('svg'),
+		url('/assets/fonts/fv-almelo/FV-Almelo.eot'),
+		url('/assets/fonts/fv-almelo/FV-Almelo.eot?#iefix') format('embedded-opentype');
 	font-weight: normal;
 	font-style: normal;
 }
