--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,11 +13,10 @@
 }
 
 body {
-	/* sea green 300 */
 	background-color: rgb(157 175 177);
 }
 
-// hide markers of number box
+/* hide markers of number box */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
