--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,18 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-	font-family: 'FV Almelo';
-	src: url('/assets/fonts/fv-almelo/FV-Almelo.woff') format('woff'),
-		url('/assets/fonts/fv-almelo/FV-Almelo.svg#FV-Almelo') format('svg'),
-		url('/assets/fonts/fv-almelo/FV-Almelo.eot'),
-		url('/assets/fonts/fv-almelo/FV-Almelo.eot?#iefix') format('embedded-opentype');
-	font-weight: normal;
-	font-style: normal;
-}
-
 body {
 	background-color: rgb(157 175 177);
+	font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+		'Noto Color Emoji';
 }
 
 /* hide markers of number box */
