--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,8 @@
 @tailwind utilities;
 
 body {
+	/* sea-green-300 */
 	background-color: rgb(157 175 177);
-	font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-		'Noto Color Emoji';
 }
 
 /* hide markers of number box */
